# contest-submissions

./: .gitignore  LICENSE  README.md  in.txt  scraper.cabal  stack.yaml
src/: Main.hs
